<resources>
    <string name="app_name">SuperCleaner</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="register_success">You are registered successfully.</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_services">Services</string>
    <string name="title_orders">Orders</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_post_code">PostCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_post_code">Please enter post-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="err_your_address_added_successfully">Your address is added successfully.</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>
    <string name="action_add_service">Add Service</string>
    <string name="title_add_service">Add Service</string>
    <string name="et_hint_service_title">Give a title to the service</string>
    <string name="et_hint_service_price">Give the Service Price</string>
    <string name="et_hint_service_description">Give a description of the service</string>
    <string name="err_msg_select_service_image">Please select service image</string>
    <string name="err_msg_enter_service_title">Please enter the title of the service</string>
    <string name="err_msg_enter_product_price">Please enter the price of the service</string>
    <string name="err_msg_enter_product_description">Please give a description of the service</string>
    <string name="service_uploaded_success_message">service uploaded successfully</string>
    <string name="no_services_added_yet">No services added yet</string>
    <string name="btn_add_to_cart">Add To Cart</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_service_details">SERVICE DETAILS</string>
    <string name="lbl_service_description">Service Description</string>
    <string name="success_message_item_added_to_cart">item added to cart successfully</string>
    <string name="btn_lbl_go_to_cart">go to cart</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_vat">VAT(13.5%)</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address"></string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">Make a Reservation</string>
    <string name="title_select_address">select address</string>
    <string name="msg_item_removed_successfully">item removed successfully</string>
    <string name="no_reservations_placed_yet">no reservations placed yet</string>

    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="reservation_details_lbl">Reservation Details</string>
    <string name="reservation_details_lbl_order_id">Reservation ID</string>
    <string name="reservation_details_lbl_order_date">Reservation Date</string>
    <string name="reservation_details_lbl_order_status">Reservation Status</string>
    <string name="reservation_status_pending">Pending</string>
    <string name="reservation_details_lbl_shipping_address">Shipping Address</string>

    <string name="reservation_status_in_process">In Process</string>
    <string name="reservation_status_delivered">Delivered</string>
    <string name="reservation_status_complete">Reservation complete</string>
    <string name="reservation_details_lbl_address">Address</string>
    <string name="checkout_lbl_service_items">Service Items</string>
    <string name="btn_service_details">service details</string>
    <string name="cart">Cart</string>
    <string name="lbl_cash">Cash</string>
    <string name="checkout_lbl_time_date">Time and Date</string>
    <string name="pick_date">Choose Date</string>
    <string name="pick_time">Choose Time</string>
    <string name="reservation_details_lbl_order_time">Reservation Time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_reserved_services">Reserved Services</string>
    <string name="no_services_reserved_yet">No services reserved yet</string>
    <string name="title_reserved_service_details">Reserved Service Details</string>
    <string name="service_details_lbl">Service Details</string>
    <string name="service_details_lbl_service_id">Service ID</string>
    <string name="service_details_lbl_service_date">Reserved Date</string>
    <string name="service_details_lbl_address">Address</string>
    <string name="service_details_lbl_service_time">Reserved time</string>

</resources>