<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_vector_dashboard"
            android:title="@string/title_dashboard" />
        <item
            android:id="@+id/navigation_services"
            android:icon="@drawable/ic_vector_services"
            android:title="@string/title_services" />
        <item
            android:id="@+id/navigation_reservations"
            android:icon="@drawable/ic_vector_orders"
            android:title="@string/title_reservations" />
        <item
            android:id="@+id/navigation_reserved_service"
            android:icon="@drawable/ic_vector_reserved_service"
            android:title="@string/title_reserved_services" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_vector_settings"
            android:title="@string/title_settings"
            />
        <item
            android:id="@+id/item_cart"
            android:icon="@drawable/ic_vector_cart"
            android:title="@string/cart"
            />
        <item
            android:id="@+id/item_logout"
            android:title="@string/btn_lbl_logout"
            />

    </group>
</menu>